# servings-cli

./: .gitignore  README.md  pyproject.toml
docs/: README.md
scripts/: send_pxe_request.py
src/: __init__.py  boot_config.py  dhcp_server.py  http_server.py  logic.py  main.py  proxydhcp.py  server.py  start_direct.py  tftp.py
test/: test_boot_servers.py  test_dhcp_server.py  test_integration.py  test_parse_packet.py
tests/: test_parse_packet.py
