[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "servings-termux"
version = "0.1.0"
description = "Run a PXE/Boot server directly from your phone. No need for a USB."
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
]

[project.scripts]
servings = "src.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]
